--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
-    "gulp-jade": "^1.1.0",
     "gulp-less": "^3.1.0",
+    "gulp-pug": "^3.1.0",
     "gulp-sourcemaps": "^2.2.0"
   }
 }
