--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp-coffee": "^2.3.2",
     "gulp-less": "^3.1.0",
     "gulp-pug": "^3.1.0",
-    "gulp-sourcemaps": "^2.2.0"
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglyfly": "^1.4.2"
   }
 }
