--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
+    "gulp-ejs": "^2.3.0",
     "gulp-less": "^3.1.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
