--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-less": "^3.1.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglyfly": "^1.4.2"
   }
